--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "framer-motion": "^11.13.1",
+    "lenis": "^1.1.18",
     "lucide-react": "^0.465.0",
+    "motion": "^11.14.3",
     "next": "13.4.10",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "react-scroll-parallax": "^3.4.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7"
