--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.3.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.171.0"
   }
 }
