--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
+    "eslint-config-next": "^14.2.22",
     "framer-motion": "^11.13.1",
     "lenis": "^1.1.18",
     "lucide-react": "^0.465.0",
     "motion": "^11.14.3",
-    "next": "13.4.10",
+    "next": "^14.2.22",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.26",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^4.10.1",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.5.5",
